--- a/Pra01_lottoNumber/app/src/main/res/values/strings.xml
+++ b/Pra01_lottoNumber/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Pra01_lottoNumber</string>
+    <string name="app_name">Lotto Number</string>
 </resources>
